# spine-open-source

./: .clang-format  .gitignore  .gitmodules  README.md
python/agent/: agent.py  context.py  definitions.py  dumb.py  history.py  master.py  run_master.py
python/cc/: arg_parser.py  spine.py
python/eval/: context.py  eval.json  eval.py  infer_polling.py  spine_infer.py
python/helpers/: buffer.py  context.py  generate_trace.py  ipc_socket.py  logger.py  merge_tunnel_logs.py  message.py  noise.py  parse_log.py  poller.py  subprocess_wrappers.py  total_config.py  utils.py
python/model/current/: total_config.py
python/train/policy/: context.py  spine.py  utils.py
spine-kernel/python/: README.md
spine-kernel/python/src/: context.py  helper.py  ipc_socket.py  logger.py  message.py  msg_sender.py  netlink.py  poller.py  spine.py  spine_eval.py  spine_flow.py
spine-kernel/python/test/: context.py  run_multi_sender.sh  run_test.sh  scubic_receiver.py  scubic_sender.py  test_little_endlian.py  test_message.py  test_spine_ctl.py
spine-kernel/src/: Makefile  spine_kernel_load.sh  spine_kernel_unload.sh  spine_nl.c  spine_nl.h  tcp_neo.c  tcp_scubic.c  tcp_spine.c  tcp_spine.h  tcp_vanilla.c
spine-kernel/src/lib/: serialize.c  serialize.h  spine.c  spine.h  spine_err.h  spine_priv.c  spine_priv.h
spine-kernel/test/: Makefile  test_netlink.c  test_netlink_user.c  test_netlink_user.py
src/: CMakeLists.txt  Makefile  client.cc  client_eval.cc  client_spine.cc  config.h.in  passive_client.cc  server.cc
src/net/: CMakeLists.txt  Makefile  child_process.cc  child_process.hh  common.hh  current_time.hh  deepcc_socket.cc  deepcc_socket.hh  exception.hh  file_descriptor.cc  file_descriptor.hh  filesystem.hh  ipc_socket.cc  ipc_socket.hh  logging.cc  logging.hh  poller.cc  poller.hh  serialization.cc  serialization.hh  signalfd.cc  socket.cc  socket.hh  system_runner.cc  tcp_info.hh
src/test/: CMakeLists.txt  file_raw_sock_sender.cc  file_receiver.cc  file_sender.cc  test_ipc.cc
tools/: setup_kernel.sh
